# take-waza

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PRD.md  README.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  settings.json
.claude/scripts/: post-lint.sh
.github/workflows/: ci.yml
docs/: harvest.md  quality-override.md
docs/adr/: 001-graph-structure-design.md
src/: main.tsx
src/components/: BambooStrip.tsx  CrossingMarker.tsx  ParameterPanel.tsx  StepNavigator.tsx  WeavingPreview.tsx  WeavingScene.tsx
src/hooks/: useDebounce.ts  usePatternParams.ts  useStepNavigation.ts  useWasmEngine.ts
src/lib/: graph-to-mesh.test.ts  graph-to-mesh.ts  sample-patterns.test.ts  sample-patterns.ts  sample.test.ts  sample.ts  step-decompose.test.ts  step-decompose.ts  wasm-bridge.test.ts  wasm-bridge.ts
test/e2e/: smoke.spec.ts
wasm-engine/: Cargo.toml
wasm-engine/pkg/: package.json  wasm_engine.d.ts  wasm_engine.js  wasm_engine_bg.wasm  wasm_engine_bg.wasm.d.ts
wasm-engine/src/: graph.rs  lib.rs  patterns.rs  steps.rs
