[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2021"
description = "竹ひご編みパターン計算エンジン (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[profile.release]
opt-level = "s"
lto = true
